# unb-consultant

./: .gitignore  AGENTS.md  README.md  SKILL.md  pyproject.toml
.opencode/skills/unb-consultant/: SKILL.md
src/unb_consultant/: __main__.py  ask.py  auth.py  catalog.py  cli.py  config.py  expert.py  i18n.py  init.py  mcp_server.py  merger.py  skill_gen.py  source.py  tier.py
tests/: test_core.py
