[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unb-consultant"
version = "0.1.6"
description = "Universal NotebookLM-Based Consultant - create and query AI experts via NotebookLM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Freddy Eleazar", email = "freddyeleazar@gmail.com"},
]
keywords = ["notebooklm", "gemini-notebook", "ai-agent", "mcp", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "notebooklm-py>=0.7.0",
    "click>=8.0",
    "mcp>=1.0.0",
]

[project.scripts]
unb = "unb_consultant.cli:cli"

[project.optional-dependencies]
browser = ["notebooklm-py[browser]"]
cookies = ["notebooklm-py[cookies]"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/unb_consultant"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
